# elasticsearch-toolkit-py

./: .gitignore  .pre-commit-config.yaml  LICENSE  QUERY_ANALYZER_IMPLEMENTATION_PLAN.md  README.md  check_module.py  es-query-toolkit-design.md  pyproject.toml  test_query_analyzer.py
examples/: aggregation_examples.py  bulk_operations_example.py  nested_query_examples.py
src/elasticflow/: __init__.py  exceptions.py  typing.py
src/elasticflow/builders/: __init__.py  dsl.py  query_string.py
src/elasticflow/bulk/: __init__.py  exceptions.py  models.py  tool.py
src/elasticflow/connection/: __init__.py  exceptions.py  models.py  tool.py
src/elasticflow/core/: __init__.py  conditions.py  constants.py  fields.py  operators.py  query.py  utils.py
src/elasticflow/geo/: __init__.py  exceptions.py  models.py  tool.py
src/elasticflow/index_manager/: __init__.py  exceptions.py  models.py  tool.py
src/elasticflow/parsers/: __init__.py  response.py  types.py
src/elasticflow/query_analyzer/: __init__.py  exceptions.py  models.py  rules.py  tool.py
src/elasticflow/time_range/: __init__.py  (+3 more)
tests/: test_dsl_builder.py  test_nested_conditions.py  test_query_string_builder.py  test_response_parser.py  test_transformer.py
tests/test_bulk/: __init__.py  test_tool.py
tests/test_connection/: __init__.py  test_factory.py  test_models.py
tests/test_geo/: __init__.py  test_models.py  test_tool.py
tests/test_index_manager/: __init__.py  test_policy_manager.py  test_policy_models.py  test_policy_utils.py  test_tool.py
tests/test_time_range/: __init__.py  test_tool.py
(+7 files in other folders)
